--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 #   # - osx
 #   # - windows
 # dist: xenial
-# language: rust
+language: rust
 # rust:
 #   - stable
   # - nightly
@@ -14,6 +14,7 @@
 matrix:
   include:
     - os: linux
+      dist: xenial
       rust: stable
     - os: osx
       rust: stable
@@ -22,8 +23,8 @@ matrix:
   fast_finish: true
 cache: cargo
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install curl libcurl3
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update                ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install curl libcurl3 ; fi
 script:
   - cargo build --release --verbose
   - cargo test --release --verbose
