--- a/data/cli.yaml
+++ b/data/cli.yaml
@@ -2406,12 +2406,6 @@ subcommands:
         about: get the console output from the server
         args:
         - id: *id001
-        - length:
-            help: The number of lines to fetch from the end of console log. All lines
-              will be returned if this is not specified.
-            long: length
-            multiple: false
-            takes_value: true
         visible_aliases:
         - server
     args:
@@ -2430,21 +2424,6 @@ subcommands:
         about: create a remote console to server
         args:
         - id: *id001
-        - protocol:
-            help: The protocol of remote console. The valid values are vnc, spice,
-              rdp, serial and mks. The protocol mks is added since Microversion 2.8.
-            required: true
-            long: protocol
-            multiple: false
-            takes_value: true
-        - type:
-            help: The type of remote console. The valid values are novnc, xvpvnc,
-              rdp-html5, spice-html5, serial, and webmks. The type webmks is added
-              since Microversion 2.8.
-            required: true
-            long: type
-            multiple: false
-            takes_value: true
         visible_aliases:
         - server
     args:
@@ -2466,31 +2445,31 @@ subcommands:
             help: the path to the file to upload.
             required: true
             long: file
-            multiple: false
             takes_value: true
+            multiple: false
         - name:
             help: a name to give object (Optional).
             long: name
-            multiple: false
             takes_value: true
+            multiple: false
         - container:
             help: name of the container to use.
             required: true
             long: container
-            multiple: false
             takes_value: true
+            multiple: false
         - parts:
             help: amount of parts to split the file in before uploading. Enables dynamic
               large objects.
             long: parts
-            multiple: false
             takes_value: true
+            multiple: false
         - skip-parts:
             help: skip parts when uploading large files (should be used with the 'parts'
               argument).
             long: skip-parts
-            multiple: false
             takes_value: true
+            multiple: false
             default_value: '0'
         visible_aliases:
         - object
@@ -2503,8 +2482,8 @@ subcommands:
             help: a name to give object (Optional).
             required: true
             long: name
-            multiple: false
             takes_value: true
+            multiple: false
         visible_aliases:
         - container
     args:
@@ -2521,24 +2500,7 @@ subcommands:
         index: 1
         case_insensitive: true
         about: download file from object store
-        args:
-        - file:
-            help: the path to the file to upload.
-            required: true
-            long: file
-            multiple: false
-            takes_value: true
-        - name:
-            help: a name to give object (Optional).
-            long: name
-            multiple: false
-            takes_value: true
-        - container:
-            help: name of the container to use.
-            required: true
-            long: container
-            multiple: false
-            takes_value: true
+        args: []
         visible_aliases:
         - object
     args:
