--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openstack-client"
-version = "0.6.0"
+version = "0.6.1"
 authors = ["thomas9911 <thomastimmer11@hotmail.com>"]
 
 [dependencies]
@@ -28,4 +28,6 @@ prettytable-rs = {version = "^0.8", features = ["csv"]}
 handlebars = "*"
 memmap = "*"
 indicatif = "*"
+log = "*"
+simple_logger = "*"
 # structopt-derive = "*"
