changed cache hasher with sha2 hasher

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ serde = "*"
 serde_derive = "*"
 serde_json = "*"
 serde_yaml = "*"
+bincode = "*"
 envy = "*"
 url = "*"
 # reqwest = {version = "*", features = [], default-features = true}
@@ -30,4 +31,5 @@ memmap = "*"
 indicatif = "*"
 log = "*"
 simple_logger = "*"
+sha2 = "*"
 # structopt-derive = "*"
